--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,8 @@ title: "PBC"
 format: 
   html:
     page-layout: custom
+    #grid:
+    #  body-width: 1200px
 ---
 
 ::: grid
@@ -18,7 +20,7 @@ format:
 
 Пятница с ЦЦИ: перевозки нефти – 13 сентября в 10-00. [Регистрация →](events.qmd)
 
-ЦЦИ начал публиковать индексы на российскую морскую логистику [Подробнее →](events.qmd)
+ЦЦИ начал публиковать индексы на российскую морскую логистику [Подробнее →](markets-sea-freight.qmd)
 
 :::
 
@@ -37,9 +39,13 @@ format:
 Что ещё не менялось в 2024 г.? Ставки на полувагоны!
 Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
 
+[Подробнее](markets-railways.qmd)
+
 **25.08.2024 Фрахт нефти **
 
-Ставки на сырую нефть остаются низкими, несмотря на сокращение выпуска нефтепродуктов.
+Ставки на перевозки сырой нефти остаются низкими, несмотря на сокращение выпуска нефтепродуктов.
+
+[Подробнее →](markets-sea-freight.qmd)
 
 ::::
 
@@ -48,7 +54,8 @@ format:
 ### Сырьевой индекс ЦЦИ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [→](pbc-index.qmd)
 
 
--- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
+-- сводный индекс цен российского сырьевого экспорта. 
+Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
