--- a/markets-railways.qmd
+++ b/markets-railways.qmd
@@ -3,6 +3,7 @@ title: "Железная дорога"
 sidebar: false
 format:
    html: 
+     page-layout: custom
      grid:
       body-width: 1000px
 ---
@@ -16,8 +17,7 @@ format:
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(highcharter)
 
-hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")
-
+hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")  %>%  hc_tooltip(enabled = "false")
 
 ```
 :::
@@ -32,6 +32,7 @@ hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")
 **31.08.2024 Сухопутная логистика**
 
 Что ещё не менялось в 2024 г.? Ставки на полувагоны! Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
+
 :::
 
 ::: g-col-6
@@ -45,7 +46,7 @@ hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")
 ::: g-col-6
 ### Мероприятия
 
-*31.05.2024* Пятница с ЦЦИ: уголь
+*31.08.2024* Пятница с ЦЦИ: уголь
 
 Материалы вебинара
 :::
@@ -58,7 +59,9 @@ hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")
 ### Демо-версия
 
 ![](fig/2024-06-logisticts-container-p1.png)
-Подпишитесь, чтобы читать полную версию. Контакты клиентской службы: [subscribe@pbc-index.ru](mailto:subscribe@pbc-index.ru)
+Подпишитесь, чтобы прочитать полную версию. 
+
+Контакты клиентской службы: [subscribe@pbc-index.ru](mailto:subscribe@pbc-index.ru)
 
 :::
 :::
