--- a/methodology-benchmark-pbc.qmd
+++ b/methodology-benchmark-pbc.qmd
@@ -39,7 +39,7 @@ toc: true
 
 ### Методика расчета ценовых индикаторов
 
-Ценовые индикаторы рассчитываются, как среднее арифметическое значение подтвержденных рыночных сделок, попавших в рыночный диапазон ответов. Сделка - это информация о рыночной котировке, данные которой подтверждены со стороны покупателя и продавца, или информация о результатах публичных торгов. Котировка - ответ участника рынка о наблюдаемом уровне цен на рынке, который удовлетворяет оценке рыночного диапазона котировок. Рыночный диапазон котировок - это все ответы участников рынка, кроме выбросов, не входящих в 97,5% доверительный интервал нормального распределения. Использование принципа усреднения на основе метода средне арифметических величин обусловлено подходом к минимизации влияния субъективных факторов в оценке, а также базовыми положениями экономической теории к понятию рыночных условий сделки, предполагающих равный доступ участников рынка.\
+Ценовые индикаторы рассчитываются, как среднее арифметическое значение подтвержденных рыночных сделок, попавших в рыночный диапазон ответов. Сделка - это информация о рыночной котировке, данные которой подтверждены со стороны покупателя и продавца, или информация о результатах публичных торгов. Котировка - ответ участника рынка о наблюдаемом уровне цен на рынке, который удовлетворяет оценке рыночного диапазона котировок. Рыночный диапазон котировок - это все ответы участников рынка, кроме выбросов, не входящих в 97,5% доверительный интервал нормального распределения. Использование принципа усреднения на основе метода средне арифметических величин обусловлено подходом к минимизации влияния субъективных факторов в оценке, а также базовыми положениями экономической теории к понятию рыночных условий сделки, предполагающих равный доступ участников рынка.
 Использование рыночного диапазона в расчете индекса позволяет очистить опросные данные от аномальных значений и учитывать исключительно непротиворечивые и достоверные данные о рыночных ценах.
 
 ### Корректировка данных
