changed files location

--- a/about.qmd
+++ b/about.qmd
@@ -2,8 +2,7 @@
 title: "О нас"
 ---
 
-</br>
-</br>
+</br> </br>
 
 **Центр ценовых индексов (ЦЦИ)** -- российское ценовое агентство. Оперативно публикуем цены на товары российского экспорта и логистику.
 
@@ -12,7 +11,7 @@ title: "О нас"
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | [Репрезентативность]{.highlight}                            | Цена - функция времени, пространства, качества товара, условий сделки. Репрезентативность ценового индекса определяется выбором наиболее типичных и рыночных условий поставки и различается для отраслей |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| [Независимость]{.highlight}                                 | Работа Центра функционально отделена от прочих подразделений Банка. Разработка методологий и контроль за их соблюдением независимы от оценки                                                             |
+| [Независимость]{.highlight}                                 | Независимая Служба методологии и комплаенса осуществляет контроль за соблюдением методологии. Разработка методологий и контроль за их соблюдением независимы от оценки                                   |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | [Управление конфликтом]{.highlight} [интересов]{.highlight} | Внутренние политики направлены на регулярное выявление и предотвращение конфликта интересов \|                                                                                                           |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
