--- a/index.qmd
+++ b/index.qmd
@@ -3,13 +3,14 @@ title: "PBC"
 format: 
   html:
     page-layout: custom
-    #grid:
-    #  body-width: 1200px
+    grid:
+      sidebar-width: 350px
 ---
 
 ::: grid
 
-::: g-col-6
+::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
+
 <!-- :::{.column-screen} -->
 <!-- ![](images/pbc-background.png){width="100%"} -->
 <!-- ::: -->
@@ -20,17 +21,17 @@ format:
 
 Пятница с ЦЦИ: перевозки нефти – 13 сентября в 10-00. [Регистрация →](events.qmd)
 
-ЦЦИ начал публиковать индексы на российскую морскую логистику [Подробнее →](markets-sea-freight.qmd)
+ЦЦИ начал публиковать индексы на российскую морскую логистику. </br> [Подробнее →](markets/markets-sea-freight.qmd)
 
 :::
 
-::: g-col-6
+::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
 
 ![](images/ЦЦИ_pattern_color.svg){width="80%"}
 :::
 
 
-::: g-col-6
+::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
 
 ### Новости рынков
 
@@ -39,17 +40,17 @@ format:
 Что ещё не менялось в 2024 г.? Ставки на полувагоны!
 Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
 
-[Подробнее](markets-railways.qmd)
+[Подробнее](markets/markets-railways.qmd)
 
 **25.08.2024 Фрахт нефти **
 
 Ставки на перевозки сырой нефти остаются низкими, несмотря на сокращение выпуска нефтепродуктов.
 
-[Подробнее →](markets-sea-freight.qmd)
+[Подробнее →](markets/markets-sea-freight.qmd)
 
 ::::
 
-::: g-col-6
+::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
 
 ### Сырьевой индекс ЦЦИ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [→](pbc-index.qmd)
 
