--- a/methodology.qmd
+++ b/methodology.qmd
@@ -1,42 +1,43 @@
 ---
 title: "Методология"
 ---
+
 </br>
 
 ### Методология ценовых индикаторов
 
-![](images/icon-docs.svg)[Методология ценовых индикаторов](methodology-benchmark-pbc.qmd)
+![](images/icon-docs.svg)[Методология ценовых индикаторов](methodology/methodology-benchmark-pbc.qmd)
 
 ### Спецификации ценовых индикаторов
 
-![](images/icon-tanker.svg) Нефть и нефтепродукты
+![](images/icon-tanker.svg) [Нефть и нефтепродукты](methodology/specs-oil.qmd)
 
-![](images/icon-gas.svg)Газ
+![](images/icon-gas.svg)[Газ](methodology/specs-gas.qmd)
 
 ![](images/icon-coal.svg) [Уголь](methodology/specs-coal.qmd)
 
-![](images/icon-agro.svg)Удобрения
+![](images/icon-agro.svg)[Удобрения](methodology/specs-fertilizers.qmd)
 
-![](images/icon-chemicals2.svg)Метанол
+![](images/icon-chemicals2.svg)[Метанол](methodology/specs-methanol.qmd)
 
-![](images/icon-chemicals.svg)Ароматические углеводороды
+![](images/icon-chemicals.svg)[Ароматические углеводороды](methodology/specs-aromatics.qmd)
 
-![](images/icon-wheat.svg)Пшеница
+![](images/icon-wheat.svg)[Пшеница](methodology/specs-wheat.qmd)
 
-![](images/icon-maslo.svg)Подсолнечное масло
+![](images/icon-maslo.svg)[Подсолнечное масло](methodology/specs-sunflower.qmd)
 
-![](images/railways-icon.svg)   [Железнодорожные перевозки](methodology/specs-logistics.qmd)
+![](images/railways-icon.svg)[Железнодорожные перевозки](methodology/specs-logistics.qmd)
 
-![](images/icon-ship.svg)Морские перевозки
+![](images/icon-ship.svg) [Морские перевозки](methodology/specs-freight.qmd)
 
-![](images/icon-ports.svg)Порты
+![](images/icon-ports.svg)[Порты](methodology/specs-ports.qmd)
 
 ### Прочие методологии
 
-[Методология консенсус-прогноза](methodology-consensus-pbc.qmd)
+[Методология консенсус-прогноза](methodology/methodology-consensus-pbc.qmd)
 
-[Методология сырьевого индекса](methodology-pbc.qmd)
+[Методология сырьевого индекса](methodology/methodology-pbc.qmd)
 
+### Контакты
 
-### Контакты 
-*Контакты методологической службы и комплаенса*: [methodology@pbc-index.ru](mailto:methodology@pbc-index.ru)
+*Контакты методологической службы и комплаенса*: [methodology\@pbc-index.ru](mailto:methodology@pbc-index.ru)
