--- a/index.qmd
+++ b/index.qmd
@@ -8,11 +8,11 @@ format:
 ---
 
 ::: grid
-
-::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
-
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 <!-- :::{.column-screen} -->
+
 <!-- ![](images/pbc-background.png){width="100%"} -->
+
 <!-- ::: -->
 
 ### Актуальное
@@ -22,41 +22,32 @@ format:
 Пятница с ЦЦИ: перевозки нефти – 13 сентября в 10-00. [Регистрация →](events.qmd)
 
 ЦЦИ начал публиковать индексы на российскую морскую логистику. </br> [Подробнее →](markets/markets-sea-freight.qmd)
-
 :::
 
-::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
-
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ![](images/ЦЦИ_pattern_color.svg){width="80%"}
 :::
 
-
-::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
-
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
 **31.08.2024 Сухопутная логистика**
 
-Что ещё не менялось в 2024 г.? Ставки на полувагоны!
-Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
+Что ещё не менялось в 2024 г.? Ставки на полувагоны! Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
 
 [Подробнее](markets/markets-railways.qmd)
 
-**25.08.2024 Фрахт нефти **
+**25.08.2024 Фрахт нефти**
 
 Ставки на перевозки сырой нефти остаются низкими, несмотря на сокращение выпуска нефтепродуктов.
 
 [Подробнее →](markets/markets-sea-freight.qmd)
+:::
 
-::::
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+### Сырьевой индекс ЦЦИ                         [→](pbc-index.qmd)
 
-::: {.g-col-6 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6}
-
-### Сырьевой индекс ЦЦИ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [→](pbc-index.qmd)
-
-
--- сводный индекс цен российского сырьевого экспорта. 
-Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
+-- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -163,7 +154,5 @@ index_plot$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Ап
 index_plot
 
 ```
-
 :::
-
 :::
