--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -5,13 +5,14 @@ format:
    html: 
      page-layout: custom
      grid:
-      body-width: 1000px
+      body-width: 900px
 ---
 
-# ![](images/railways-icon.svg) Сухопутная логистика
+# ![](../images/railways-icon.svg) Сухопутная логистика{.my-custom-class style="margin-left:8%;"}
 
 ::: grid
-::: g-col-6
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Индексы
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
@@ -22,7 +23,7 @@ hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")  %>%  hc_tooltip(ena
 ```
 :::
 
-::: g-col-6
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
 **31.08.2024 Сухопутная логистика**
@@ -32,36 +33,34 @@ hchart(LakeHuron, color = "#1A4AFC", name = "Ставка")  %>%  hc_tooltip(ena
 **31.08.2024 Сухопутная логистика**
 
 Что ещё не менялось в 2024 г.? Ставки на полувагоны! Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
-
 :::
 
-::: g-col-6
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Методология
 
-[Спецификация ставок сухопутной логистики](methodology-benchmark-pbc.qmd)
+[Спецификация ставок сухопутной логистики](../methodology/methodology-benchmark-pbc.qmd)
 
-[Методология ценовых индикаторов](methodology/specs-logistics.qmd)
+[Методология ценовых индикаторов](../methodology/specs-logistics.qmd)
 :::
 
-::: g-col-6
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Мероприятия
 
 *31.08.2024* Пятница с ЦЦИ: уголь
 
 Материалы вебинара
+
 :::
 
-::: g-col-6
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Аналитика
 :::
 
-::: g-col-6
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Демо-версия
 
-![](fig/2024-06-logisticts-container-p1.png)
-Подпишитесь, чтобы прочитать полную версию. 
+![](../fig/2024-06-logisticts-container-p1.png) Подпишитесь, чтобы прочитать полную версию.
 
-Контакты клиентской службы: [subscribe@pbc-index.ru](mailto:subscribe@pbc-index.ru)
-
+Контакты клиентской службы: [subscribe\@pbc-index.ru](mailto:subscribe@pbc-index.ru)
 :::
 :::
