pbc index update

--- a/index.qmd
+++ b/index.qmd
@@ -9,17 +9,17 @@ format:
 
 ::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+
+<!-- пытаемся разместить дополнительное фоновое изображение, пока не получается -->
 <!-- :::{.column-screen} -->
-
 <!-- ![](images/pbc-background.png){width="100%"} -->
-
 <!-- ::: -->
 
 ### Актуальное
 
-Пятница с ЦЦИ: зерно – 13 сентября в 15:00. [Регистрация →](events.qmd)
+Пятница с ЦЦИ: зерно – 13 сентября в 14:45. [Регистрация →](events.qmd)
 
-Пятница с ЦЦИ: перевозки нефти – 13 сентября в 10-00. [Регистрация →](events.qmd)
+Пятница с ЦЦИ: перевозки нефти – 13 сентября в 13-30. [Регистрация →](events.qmd)
 
 ЦЦИ начал публиковать индексы на российскую морскую логистику. </br> [Подробнее →](markets/markets-sea-freight.qmd)
 :::
