--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-0,6 п.]{.my-custom-class style="color:#f6514c;"}** ([**-2,3 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-3,3 п.]{.my-custom-class style="color:#f6514c;"}** ([**-1,9 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: трубопроводный газ [**+8,6%**]{.my-custom-class style="color:#44bf78;"}, нефть [**-3,9%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: нефть [**-7,5%**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-5,1%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,8 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**-2,6 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-0,5 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -199,4 +199,7 @@ discount_plot
 
 *Источник: ЦЦИ*
 
+
 ------------------------------------------------------------------------
+
+[Мониторинг - Август 2024](reports/2024-08-cci-index.pdf)
