--- a/events.qmd
+++ b/events.qmd
@@ -6,8 +6,8 @@ title: "События"
 
 ### Пятница с ЦЦИ: зерно – 13 сентября в 14:45.
 
-Анонс мероприятия
+[Cсылка на регистрацию](https://live-event.pro/130924)
 
 ### Пятница с ЦЦИ: перевозки нефти – 13 сентября в 13-30.
 
-Анонс мероприятия
+[Cсылка на регистрацию](https://live-event.pro/130924)
