--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -3,3 +3,11 @@ title: "Нефть"
 ---
 
 Рынок нефти.
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+### Методология
+
+[Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
+
+[Спецификация котировок на нефть](../methodology/specs-oil.qmd)
+:::
