--- a/methodology/methodology-pbc.qmd
+++ b/methodology/methodology-pbc.qmd
@@ -2,5 +2,4 @@
 title: "Методология сырьевого индекса"
 ---
 
-Методология Сырьевого индекса
-
+[Методология Сырьевого индекса](../pdf/PBC_Commodity_Index_Methodology.pdf)
