--- a/reports/methodology-benchmark-pbc-2.qmd
+++ b/reports/methodology-benchmark-pbc-2.qmd
@@ -8,8 +8,6 @@ format:
       font-paths: fonts/
       number-sections: false
       columns: 1
-   
-
 ---
 
 ### [**Введение**]{style="color:#1b4afc"}
@@ -47,8 +45,7 @@ format:
 
 ### [Методика расчета ценовых индикаторов]{style="color:#1b4afc"}
 
-Ценовые индикаторы рассчитываются, как среднее арифметическое значение подтвержденных рыночных сделок, попавших в рыночный диапазон ответов. Сделка - это информация о рыночной котировке, данные которой подтверждены со стороны покупателя и продавца, или информация о результатах публичных торгов. Котировка - ответ участника рынка о наблюдаемом уровне цен на рынке, который удовлетворяет оценке рыночного диапазона котировок. Рыночный диапазон котировок - это все ответы участников рынка, кроме выбросов, не входящих в 97,5% доверительный интервал нормального распределения. Использование принципа усреднения на основе метода средне арифметических величин обусловлено подходом к минимизации влияния субъективных факторов в оценке, а также базовыми положениями экономической теории к понятию рыночных условий сделки, предполагающих равный доступ участников рынка.
-Использование рыночного диапазона в расчете индекса позволяет очистить опросные данные от аномальных значений и учитывать исключительно непротиворечивые и достоверные данные о рыночных ценах.
+Ценовые индикаторы рассчитываются, как среднее арифметическое значение подтвержденных рыночных сделок, попавших в рыночный диапазон ответов. Сделка - это информация о рыночной котировке, данные которой подтверждены со стороны покупателя и продавца, или информация о результатах публичных торгов. Котировка - ответ участника рынка о наблюдаемом уровне цен на рынке, который удовлетворяет оценке рыночного диапазона котировок. Рыночный диапазон котировок - это все ответы участников рынка, кроме выбросов, не входящих в 97,5% доверительный интервал нормального распределения. Использование принципа усреднения на основе метода средне арифметических величин обусловлено подходом к минимизации влияния субъективных факторов в оценке, а также базовыми положениями экономической теории к понятию рыночных условий сделки, предполагающих равный доступ участников рынка. Использование рыночного диапазона в расчете индекса позволяет очистить опросные данные от аномальных значений и учитывать исключительно непротиворечивые и достоверные данные о рыночных ценах.
 
 ### [Корректировка данных]{style="color:#1b4afc"}
 
@@ -65,8 +62,6 @@ format:
 ### [Конфиденциальность данных]{style="color:#1b4afc"}
 
 Центр ценовых индексов придает большое значение обеспечению безопасности и защите информации, а также гарантирует полную конфиденциальность данных, получаемых от участников рынка.
-
-
 
 Продукт и его характеристики
 
