changed events page

--- a/events.qmd
+++ b/events.qmd
@@ -2,12 +2,19 @@
 title: "События"
 ---
 
-</br>
+### Пятница с ЦЦИ: корабли с черным золотом (13 сентября 2024)
 
-### Пятница с ЦЦИ: зерно – 13 сентября в 14:45.
+-   Особенности морского путешествия российской нефти
+-   Сколько стоит круиз от Балтики до Китая?
+-   Логистика = дисконт?
 
-[Cсылка на регистрацию](https://live-event.pro/130924)
+[Материалы вебинара](events/2024-09-13-crude.qmd)
 
-### Пятница с ЦЦИ: перевозки нефти – 13 сентября в 13-30.
+### Пятница с ЦЦИ: хлеб с маслом (13 сентября 2024)
 
-[Cсылка на регистрацию](https://live-event.pro/130924)
+-   Прогнозы урожая и экспорта зерна в 2024/25 г.
+-   Куда плывут российские подсолнечное масло и пшеница
+-   Как чувствуют себя импортеры российских агротоваров: диагноз макроэкономиста
+-   Прогноз погоды на рынке морского фрахта зерна
+
+[Материалы вебинара](events/2024-09-13-wheat.qmd)
