--- a/index.qmd
+++ b/index.qmd
@@ -9,19 +9,24 @@ format:
 
 ::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-
 <!-- пытаемся разместить дополнительное фоновое изображение, пока не получается -->
+
 <!-- :::{.column-screen} -->
+
 <!-- ![](images/pbc-background.png){width="100%"} -->
+
 <!-- ::: -->
 
 ### Актуальное
 
-Пятница с ЦЦИ: зерно – 13 сентября в 14:45. [Регистрация →](events.qmd)
+13 сентября 2024. Пятница с ЦЦИ: корабли с золотом
 
-Пятница с ЦЦИ: перевозки нефти – 13 сентября в 13-30. [Регистрация →](events.qmd)
+[Материалы →](events/2024-09-13-crude.qmd)
 
-ЦЦИ начал публиковать индексы на российскую морскую логистику. </br> [Подробнее →](markets/markets-sea-freight.qmd)
+13 сентября 2024. Пятница с ЦЦИ: хлеб с маслом
+
+[Материалы →](events/2024-09-13-wheat.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
@@ -45,7 +50,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-### Сырьевой индекс ЦЦИ                         [→](pbc-index.qmd)
+### Сырьевой индекс ЦЦИ                      [→](pbc-index.qmd)
 
 -- сводный индекс цен российского сырьевого экспорта. Отражает изменение цен на товары российского сырьевого экспорта по сравнению с уровнем января 2022 г.
 
