--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "PBC"
+title: "ЦЦИ"
 format: 
   html:
     page-layout: custom
@@ -19,14 +19,17 @@ format:
 
 ### Актуальное
 
-13 сентября 2024. Пятница с ЦЦИ: корабли с золотом
+**13 сентября 2024. Пятница с ЦЦИ: корабли с черным золотом**
 
 [Материалы →](events/2024-09-13-crude.qmd)
 
-13 сентября 2024. Пятница с ЦЦИ: хлеб с маслом
+**13 сентября 2024. Пятница с ЦЦИ: хлеб с маслом**
 
 [Материалы →](events/2024-09-13-wheat.qmd)
 
+**4 сентября 2024. Ежемесячный мониторинг: Сырьевой индекс ЦЦИ**
+
+[Материалы →](pdf/2024-08-cci-index.pdf)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
