--- a/events/2024-09-13-wheat.qmd
+++ b/events/2024-09-13-wheat.qmd
@@ -4,9 +4,9 @@ date: 13/09/2024
 lang: ru
 ---
 
-## Пятница с ЦЦИ: хлеб с маслом 
+## Пятница с ЦЦИ: хлеб с маслом
 
-13 сентября 2024
+13 сентября 2024 г.
 
 ### Основные темы
 
@@ -17,7 +17,7 @@ lang: ru
 
 ### Запись вебинара
 
-1. Куда экспортируются российское подсолнечное масло и пшеница
+1.  Куда экспортируются российское подсолнечное масло и пшеница
 
 {{< video https://www.youtube.com/watch?v=jWrrS9rQH6I >}}
 
@@ -25,12 +25,10 @@ lang: ru
 
 {{< video https://www.youtube.com/watch?v=hx6wnJrsPg4 >}}
 
-3. Прогноз погоды на рынке российского фрахта зерна
+3.  Прогноз погоды на рынке российского фрахта зерна
 
 {{< video https://www.youtube.com/watch?v=CUCXe0Vz4cg >}}
 
 4.  О ценовых ожиданиях на агротовары и любви аналитика к круассанам
 
 {{< video https://www.youtube.com/watch?v=AVcCZvD56DE >}}
-
-
