--- a/index.qmd
+++ b/index.qmd
@@ -27,9 +27,9 @@ format:
 
 [Материалы →](events/2024-09-13-wheat.qmd)
 
-**4 сентября 2024. Ежемесячный мониторинг: Сырьевой индекс ЦЦИ**
+**4 сентября 2024. Сырьевой индекс ЦЦИ. Мировые цены снижаются, российские - растут**
 
-[Материалы →](pdf/2024-08-cci-index.pdf)
+[Мониторинг август →](pdf/2024-08-cci-index.pdf)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
@@ -38,6 +38,11 @@ format:
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
+
+**04.09.2024. Сырьевой индекс ЦЦИ. Мировые цены снижаются, российские - растут**
+
+[Подробнее](pdf/2024-08-cci-index.pdf)
+
 
 **31.08.2024 Сухопутная логистика**
 
@@ -163,4 +168,5 @@ index_plot
 
 ```
 :::
+
 :::
