--- a/about.qmd
+++ b/about.qmd
@@ -8,13 +8,12 @@ title: "О нас"
 
 **Миссия Центра** обеспечить рынок репрезентативными ценовыми индикаторами. Своевременные ценовые сигналы дают экономической системе гибкость: помогают быстрее принимать решения о рисках и инвестициях.
 
-
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | [Репрезентативность]{.highlight}                            | Цена - функция времени, пространства, качества товара, условий сделки. Репрезентативность ценового индекса определяется выбором наиболее типичных и рыночных условий поставки и различается для отраслей |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | [Независимость]{.highlight}                                 | Независимая Служба методологии и комплаенса осуществляет контроль за соблюдением методологии. Разработка методологий и контроль за их соблюдением независимы от оценки                                   |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| [Управление конфликтом]{.highlight} [интересов]{.highlight} | Внутренние политики направлены на регулярное выявление и предотвращение конфликта интересов                                                                                                         |
+| [Управление конфликтом]{.highlight} [интересов]{.highlight} | Внутренние политики направлены на регулярное выявление и предотвращение конфликта интересов \|                                                                                                           |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | [Прозрачность]{.highlight}                                  | Процедура оценки основана на методологиях. Наши службы регулярно проверяют их актуальность текущим рыночным условиям                                                                                     |
 +-------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -24,4 +23,5 @@ title: "О нас"
 
 </br>
 
-Контакты:  [Forecast.Center@gazprombank.ru](mailto:Forecast.Center@gazprombank.ru)
+Контакты: [office@pbc-index.ru](mailto:office@pbc-index.ru)
+
