--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -12,7 +12,7 @@ library(highcharter)
 library(tidyr)
 library(magrittr)
 
-colors = c("#2354d6", "#FF9500", '#82096c', '#d1e5ff', '#44bf78', '#f6514c', '#c3b0ef')
+colors = c("#1A4AFC", "#FF9500", '#82096c', '#d1e5ff', '#44bf78', '#f6514c', '#c3b0ef')
 
 # прочитать и преобразовать файл Excel с данными
 
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-1,7 п.]{.my-custom-class style="color:#f6514c;"}** ([**-5,8 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+1,2 п.]{.my-custom-class style="color:#44bf78;"}** ([**-2,8 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефть [**-3,8%**]{.my-custom-class style="color:#f6514c;"}, дизель [**-6,6%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: нефть [**+4,1%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-2,9%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**-1,3 п.**]{.my-custom-class style="color:#f6514c;"}, дизель [**-0,3 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**+1,3 п.**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-0,2 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -198,7 +198,6 @@ discount_plot
 ```
 
 *Источник: ЦЦИ*
-
 
 ------------------------------------------------------------------------
 
