--- a/index.qmd
+++ b/index.qmd
@@ -39,16 +39,12 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
-**04.09.2024. Сырьевой индекс ЦЦИ. Мировые цены снижаются, российские - растут**
+**04.09.2024. Сырьевой индекс ЦЦИ**
 
-[Подробнее](pdf/2024-08-cci-index.pdf)
+Мировые цены снижаются, российские - растут!\
+В августе цены на товары российского экспорта на восточном направлении упали вслед за мировыми, а на западном ― выросли из-за снижения цен на морскую логистику и роста спроса в Турции.
 
-
-**31.08.2024 Сухопутная логистика**
-
-Что ещё не менялось в 2024 г.? Ставки на полувагоны! Ставки предоставления полувагонов под перевозку угля стабильны и уже 8-ой месяц подряд колеблются в пределах нескольких процентов.
-
-[Подробнее](markets/markets-railways.qmd)
+[Подробнее →](pbc-index.qmd)
 
 **25.08.2024 Фрахт нефти**
 
@@ -168,5 +164,4 @@ index_plot
 
 ```
 :::
-
 :::
