change sea freight

--- a/index.qmd
+++ b/index.qmd
@@ -19,15 +19,15 @@ format:
 
 ### Актуальное
 
-**13 сентября 2024. Пятница с ЦЦИ: корабли с черным золотом**
+13 сентября 2024. **Пятница с ЦЦИ: корабли с черным золотом**
 
 [Материалы →](events/2024-09-13-crude.qmd)
 
-**13 сентября 2024. Пятница с ЦЦИ: хлеб с маслом**
+13 сентября 2024. **Пятница с ЦЦИ: хлеб с маслом**
 
 [Материалы →](events/2024-09-13-wheat.qmd)
 
-**4 сентября 2024. Сырьевой индекс ЦЦИ. Мировые цены снижаются, российские - растут**
+4 сентября 2024. Сырьевой индекс ЦЦИ. **Мировые цены снижаются, российские - растут**
 
 [Мониторинг август →](pdf/2024-08-cci-index.pdf)
 :::
@@ -39,6 +39,12 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**01.10.2024 Фрахт нефти**
+
+Ставки фрахта на перевозку нефти на Дальнем Востоке находятся на высоком уровне, ставки из западных портов должны начать восстановление в октябре.
+
+[Подробнее →](markets/markets-sea-freight.qmd)
+
 **04.09.2024. Сырьевой индекс ЦЦИ**
 
 Мировые цены снижаются, российские - растут!\
@@ -46,11 +52,6 @@ format:
 
 [Подробнее →](pbc-index.qmd)
 
-**25.08.2024 Фрахт нефти**
-
-Ставки на перевозки сырой нефти остаются низкими, несмотря на сокращение выпуска нефтепродуктов.
-
-[Подробнее →](markets/markets-sea-freight.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
