--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -14,13 +14,14 @@ format:
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+
 ### Котировки
 
-*24.09.2024 Перевозки нефти*
+*01.10.2024 Перевозки нефти*
 
-**Рост цен на нефть закрыл дорогу западным танкерам**
+**Российский фрахт копит силы для западных маршрутов**
 
-Ставки фрахта на перевозку российской нефти начали расти, поскольку российский рынок снова закрылся для западных судовладельцев, а эскалация конфликта между Израилем и Ливаном повышает ставки фрахта во всем мире.
+Ставки фрахта на перевозку нефти на Дальнем Востоке находятся на высоком уровне, ставки из западных портов должны начать восстановление в октябре.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -40,11 +41,11 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*23.09.2024 Перевозки угля*
+*01.10.2024 Перевозки угля*
 
-**Активность в Турции и Египте дает надежду на рост ставок**
+**Не везет: железная дорога сдерживает фрахт в портах Запада**
 
-Ставки фрахта на балкеры класса Handysize (40 тыс. т) из порта Восточный в Северный Китай выросли на 10% н/н до 11 долл./т на фоне пополнения запасов угля перед праздником «День образования КНР».
+Стоимость перевозки угля из Усть-Луги упала из-за ограничений железнодорожных перевозок в западном направлении.
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 :::
@@ -73,7 +74,14 @@ hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"М
 hc
 ```
 
-[*Примечание: ставка экспорта российской нефти рассчитывается как среднее арифметическое наиболее ликвидных базисов: Балтика - Западная Индия (Aframax), Балтика - Северный Китай (Aframax), Новороссийск - Западная Индия (Suezmax), Новороссийск - Северный Китай (Suezmax). На эти маршруты приходится 40-45% морского экспорта российской нефти. Источник ставок фрахта — еженедельные отчеты ЦЦИ «Перевозки нефти. Ставки фрахта». Полный список публикуемых ставок доступен в [Спецификации ставок морского фрахта.](../methodology/specs-freight.qmd)*]{style="font-size:0.75em"}
+[*Примечание: ставка экспорта российской нефти рассчитывается как среднее арифметическое наиболее ликвидных базисов: Балтика - Западная Индия (Aframax), Балтика - Северный Китай (Aframax), Новороссийск - Западная Индия (Suezmax), Новороссийск - Северный Китай (Suezmax). На эти маршруты приходится 40-45% морского экспорта российской нефти. Источник — еженедельные отчеты ЦЦИ «Перевозки нефти. Ставки фрахта». Полный список публикуемых ставок доступен в [Спецификации ставок морского фрахта.](../methodology/specs-freight.qmd)*]{style="font-size:0.75em"}
+
+### События
+
+*13 сентября 2024. Пятница с ЦЦИ: корабли с черным золотом*
+
+[Материалы →](../events/2024-09-13-crude.qmd)
+
 :::
 :::
 
@@ -87,10 +95,6 @@ hc
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-### События
 
-*13 сентября 2024. Пятница с ЦЦИ: корабли с черным золотом*
-
-[Материалы →](../events/2024-09-13-crude.qmd)
 :::
 :::
