--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+1,2 п.]{.my-custom-class style="color:#44bf78;"}** ([**-2,8 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+0,3 п.]{.my-custom-class style="color:#44bf78;"}** ([**-3,3 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефть [**+4,1%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-2,9%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: трубопроводный газ [**+7,3%**]{.my-custom-class style="color:#44bf78;"}, нефть [**-1,3%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**+1,3 п.**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-0,2 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**-0,5 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
