--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,10 @@ format:
 
 ### Актуальное
 
+3 октября 2024. Сырьевой индекс ЦЦИ. **Цены на российское сырье достигли минимума 2024 г.**
+
+[Мониторинг сентябрь →](pdf/2024-09-cci-index.pdf)
+
 13 сентября 2024. **Пятница с ЦЦИ: корабли с черным золотом**
 
 [Материалы →](events/2024-09-13-crude.qmd)
@@ -27,9 +31,6 @@ format:
 
 [Материалы →](events/2024-09-13-wheat.qmd)
 
-4 сентября 2024. Сырьевой индекс ЦЦИ. **Мировые цены снижаются, российские - растут**
-
-[Мониторинг август →](pdf/2024-08-cci-index.pdf)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
@@ -39,18 +40,19 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**03.10.2024. Сырьевой индекс ЦЦИ**
+
+Цены на российское сырье достигли минимума 2024 г.\
+ФРС США снизила процентную ставку, а Народный банк Китая обнародовал меры для поддержки экономики. Объявленные решения улучшили ценовые ожидания участников рынка.
+
+[Подробнее →](pbc-index.qmd)
+
+
 **01.10.2024 Фрахт нефти**
 
 Ставки фрахта на перевозку нефти на Дальнем Востоке находятся на высоком уровне, ставки из западных портов должны начать восстановление в октябре.
 
 [Подробнее →](markets/markets-sea-freight.qmd)
-
-**04.09.2024. Сырьевой индекс ЦЦИ**
-
-Мировые цены снижаются, российские - растут!\
-В августе цены на товары российского экспорта на восточном направлении упали вслед за мировыми, а на западном ― выросли из-за снижения цен на морскую логистику и роста спроса в Турции.
-
-[Подробнее →](pbc-index.qmd)
 
 :::
 
