--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -201,4 +201,4 @@ discount_plot
 
 ------------------------------------------------------------------------
 
-[Мониторинг - Август 2024](reports/2024-08-cci-index.pdf)
+[Мониторинг - Сентябрь 2024](reports/2024-09-cci-index.pdf)
