--- a/markets/markets-oilseed.qmd
+++ b/markets/markets-oilseed.qmd
@@ -1,13 +1,45 @@
 ---
-title: "Масло"
+title: "Подсолнечное масло"
+sidebar: false
 ---
 
-Рынок масла
+# ![](../images/icon-oilseed.svg) Рынок масла {.my-custom-class style="margin-left:3%;"}
 
+![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+
+::: {.grid style="margin-left:0%"}
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+### Котировки
+
+*01.10.2024 Подсолнечное масло*
+
+**Индийский импорт пойдет не как по маслу**
+
+Экспортные цены на подсолнечное масло за месяц выросли 60 долл.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+### Экспортная котировка ЦЦИ на подсолнечное масло FOB
+
+### События
+
+*13 сентября 2024. Пятница с ЦЦИ: хлеб с маслом*
+
+[Материалы →](../events/2024-09-13-wheat.qmd)
+:::
+:::
+
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
 
 [Спецификация котировок на подсолнечное масло](../methodology/specs-sunflower.qmd)
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+:::
 :::
